errors
mainwindow.cpp: In member function ‘void MainWindow::updateADCReading()’:
mainwindow.cpp:88:5: error: expected primary-expression before ‘.’ token
   88 |     .
      |     ^
mainwindow.cpp:89:5: error: expected unqualified-id before ‘if’
   89 |     if (lines.size() >= 4) {
      |     ^~
mainwindow.cpp:94:7: error: ‘else’ without a previous ‘if’
   94 |     } else {
      |       ^~~~
make: *** [makefile:37: mainwindow.o] Error 1

